# vectorlink

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
line-index/: Cargo.toml
line-index/src/: handler.rs  main.rs
nix/: manage-shell.nix  overlay.nix  python-task-shell.nix  rust-shell.nix
nix/modules/: mkQueue.nix  parseQueueOptions.nix  queue.nix  vectorlink-worker.nix  vl-queue-definition.nix
parallel-hnsw/: Cargo.toml
parallel-hnsw/benches/: bench.rs
parallel-hnsw/src/: bigvec.rs  lib.rs  parameters.rs  pq.rs  priority_queue_ring.rs  progress.rs  search.rs  serialize.rs  types.rs  utils.rs
print-search-results/: Cargo.toml
print-search-results/src/: main.rs
python/create-vectorize-task/: default.nix  pyproject.toml
python/create-vectorize-task/create_vectorize_task/: create_tasks.py
python/gpu-collation/: default.nix  nonpoetry.nix  pyproject.toml
python/read-line-from-index/: default.nix  pyproject.toml
python/read-line-from-index/read_line_from_index/: main.py
python/search-collation/: default.nix  nonpoetry.nix  pyproject.toml
python/search-collation/search_collation/: collation.py
python/vectorlink-task/: README.md  default.nix  pyproject.toml
python/vectorlink-vectorize/: README.md  default.nix  nonpoetry.nix  pyproject.toml  result
python/vectorlink-vectorize/tests/: vectorize_test.py
python/vectorlink-vectorize/vectorlink_vectorize/: backend.py  vectorize.py  vectorize_etcd.py
python/vectorlink-vectorize/vectorlink_vectorize/backends/: model.py  neuron_mxbai.py
snowflake-concat/: Cargo.toml
snowflake-concat/src/: main.rs
task-util/: Cargo.toml  default.nix
task-util/src/: main.rs  resume.rs
vectorlink/: Cargo.toml  default.nix
vectorlink-cross-search/: Cargo.toml
vectorlink-cross-search/src/: handler.rs  main.rs
vectorlink-infra/: Cargo.toml  default.nix
vectorlink-infra/src/: main.rs
vectorlink-infra/src/prolog/: infra.pl
vectorlink-quantizer/: Cargo.toml
vectorlink-quantizer/src/: main.rs
vectorlink-search-collation/: Cargo.toml
vectorlink-search-collation/src/: handler.rs  main.rs
vectorlink-store/: Cargo.toml
vectorlink-store/src/: file.rs  lib.rs  loader.rs  range.rs
vectorlink-task/: Cargo.toml
vectorlink-task-monitor/: Cargo.toml
vectorlink-task-monitor/src/: init.rs  main.rs  orphan.rs  task.rs  wait.rs
vectorlink-task-py/: Cargo.toml  README.md  default.nix  pyproject.toml
vectorlink-task-py/src/: lib.rs
vectorlink-task/src/: key.rs  lib.rs  panic.rs  queue.rs  task.rs
vectorlink-worker/: Cargo.toml  default.nix
vectorlink-worker/src/: handler.rs  main.rs
vectorlink/benches/: distance.rs
vectorlink/src/: batch.rs  comparator.rs  configuration.rs  domain.rs  indexer.rs  lib.rs  main.rs  openai.rs  search_server.rs  server.rs  utils.rs  vecmath.rs  vectors.rs
