[workspace]
resolver = "2"
members = [ "line-index",
"parallel-hnsw", "task-util",
"vectorlink",
"vectorlink-store",
"vectorlink-task",
"vectorlink-task-py",
"vectorlink-task-monitor",
"vectorlink-worker",
"vectorlink-cross-search",
"vectorlink-quantizer", "print-search-results"]

[profile.release]
debug = true
