[package]
name = "line-index"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
aws-config = { version = "1.3.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.25.0"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.200", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
vectorlink-task = {path="../vectorlink-task"}
