[package]
name = "snowflake-concat"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.3.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.25.0", features = ["behavior-version-latest"] }
clap = { version = "4.5.4", features = ["derive"] }
itertools = "0.12.1"
leaky-bucket = "1.0.1"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
