[package]
name = "vectorlink-task-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
etcd-client = "0.12.4"
futures = "0.3.30"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
vectorlink-task = { version = "0.1.0", path = "../vectorlink-task" }
