[package]
name = "vectorlink-task-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "vectorlink_task_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
async-trait = "0.1.80"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.198", features = ["derive"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0.116"
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
vectorlink-task = { version = "0.1.0", path = "../vectorlink-task" }
