[package]
name = "vectorlink-task"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
etcd-client = "0.12.4"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.116"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
