[tool.poetry]
name = "create-vectorize-task"
version = "0.1.0"
description = ""
authors = ["Matthijs van Otterdijk <matthijs@terminusdb.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
etcd3 = "^0.12.0"
#protobuf = "^3.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create-vectorize-tasks = "create_vectorize_task.create_tasks:main"