[tool.poetry]
name = "read-line-from-index"
version = "0.1.0"
description = ""
authors = ["Matthijs van Otterdijk <matthijs@terminusdb.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
read-line-from-index = "read_line_from_index.main:main"