[tool.poetry]
name = "vectorlink-task"
version = "0.1.0"
description = ""
authors = ["Matthijs van Otterdijk <matthijs@terminusdb.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
etcd3 = "^0.12.0"
protobuf = "^3.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
task-monitor = "vectorlink_task.task_monitor:main"