[tool.poetry]
name = "vectorlink-vectorize"
version = "0.1.0"
description = ""
authors = ["Matthijs van Otterdijk <matthijs@terminusdb.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
torch = "^2.2.2"
transformers = "^4.40.0"
accelerate = "^0.29.3"
sentence-transformers = "^2.7.0"

vectorlink_task = { path = "../vectorlink-task", develop = false }
boto3 = "^1.34"
pybars3 = "^0.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
backend = "vectorlink_vectorize.backend:main"
vectorize-server = "vectorlink_vectorize.vectorize_etcd:main"